--- a/main.css
+++ b/main.css
@@ -1,11 +1,13 @@
 body {
  background-color: black;
- font-family: "Helvetica";
+ font-family: "Helvetica Neue";
  color: white;
 }
 
 ul {
-	font: small-caps italic 14px/1 sans-serif;
+	font-style:italic; 
+	font-size: 15px;
+	font-family: "Arial";
 }
 
 p {
@@ -17,20 +19,17 @@ p {
 
 h1 {
 	font-size: 50px;
-	color: white;
 }
 
 h2 {
 	font-size: 30px;
-	color: white;
 }
 
 h3 {
 	font-size: 25px;
-	color: white;
+	color: blue;
 }
 
 h4 {
 	font-size: 20px;
-	color: white;
 }
